# Email-triage_scalar

./: .gitignore  00_START_HERE.md  ALLOW_SECRET.md  BEFORE_GIT_COMMIT.md  COMPLETE_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_PUSH.bat  FINAL_STATUS.md  FINAL_SUBMISSION_STATUS.txt  FIX_GITHUB_ERROR.md  FIX_SUMMARY.txt  GETTING_STARTED.md  GET_LIVE_LINK.txt  GITHUB_SAFE.md  HOW_TO_RUN.md  INDEX.md  INFERENCE_GUIDE.md  LICENSE  PUSH_TO_GITHUB.bat  QUICKSTART.md  QUICK_FIX.bat  QUICK_TEST_GUIDE.txt  README.md  README_DEPLOY.txt  README_HEADER.md  REFERENCE.md  SECURITY.md  SERVER_GUIDE.md  SIMPLE_FIX.md  START_HERE.md  SUBMISSION_READY.txt  SUBMISSION_SUMMARY.md  TASK_VALIDATION_FIXED.md  TROUBLESHOOTING.md  __init__.py  app.py  check_security.bat  check_security.sh  (+30 more)
server/: __init__.py  app.py
