[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "Email Triage OpenEnv - AI environment for email classification and prioritization"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Mallarapu Arun Chand", email = "arunchandmallarapu@gmail.com"},
    {name = "T. Someswararao", email = "someshtellakula@gmail.com"}
]
keywords = ["openenv", "email", "triage", "ai", "environment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pydantic>=2.8.2",
    "pydantic-settings>=2.5.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "openai>=1.51.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "websockets>=13.0",
    "openenv-core>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://github.com/Arunchand19/Email-triage_scalar"
Repository = "https://github.com/Arunchand19/Email-triage_scalar.git"
"Bug Tracker" = "https://github.com/Arunchand19/Email-triage_scalar/issues"

[tool.setuptools]
packages = ["server"]

[tool.setuptools.package-data]
server = ["*.yaml", "*.yml"]
